# dreambookAI

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/static/css/: style.css
app/templates/: index.html  skill.html
skills/dreambook-social/: SKILL.md
